--- a/src/components/nav-bar/navbar.css
+++ b/src/components/nav-bar/navbar.css
@@ -1,5 +1,11 @@
 nav {
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 111;
+  background: #141622;
 }
 .nav_logo,
 .nav_bar_wrapper,
@@ -149,7 +155,7 @@ nav {
   border-radius: 8px;
   display: flex;
   align-items: center;
-  margin-right: 50px;
+  margin-right: 30px;
 }
 .nav_volume div {
   height: 4px;
