--- a/src/components/nav-bar/navbar.css
+++ b/src/components/nav-bar/navbar.css
@@ -1,10 +1,11 @@
+@import url(../styles/style.css);
 nav {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 111;
+  z-index: 116;
   background: #141622;
 }
 .nav_logo,
@@ -45,19 +46,7 @@ nav {
   margin-left: 20px;
   height: 100%;
 }
-.nav_link_item a,
-.nav_link_item p,
-.nav_slots_live p,
-.nav_slots_live a {
-  font-family: "Montserrat", sans-serif;
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 13px;
-  /* font-weight: 600; */
-  line-height: 18px;
-  letter-spacing: 0em;
-  transition: all 0.3s ease;
-}
+
 .nav_link_item p,
 .nav_slots_live p {
   margin-left: 7px;
@@ -182,14 +171,14 @@ nav {
 .nav_wallet_currency svg {
   width: 24px;
   height: 24px;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 .nav_wallet_currency p {
   color: #fff;
   font-size: 14px;
   font-family: HalvarBreitschrift;
   font-style: normal;
-  font-weight: 700;
+
   line-height: normal;
   margin: 0;
 }
