--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -10,3 +10,54 @@
   font-weight: 500;
   line-height: 28px;
 }
+.nav_link_item a,
+.nav_link_item p,
+.nav_slots_live p,
+.nav_slots_live a {
+  font-family: "Montserrat", sans-serif;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 13px;
+  /* font-weight: 600; */
+  line-height: 18px;
+  letter-spacing: 0em;
+  transition: all 0.3s ease;
+}
+
+.modal_styles {
+  padding: 30px;
+}
+.modal_styles .page_title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.modal_styles .page_title div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal_styles .page_title svg {
+  cursor: pointer;
+}
+
+.main_page_styles {
+  max-width: 1508px;
+  padding-top: 32px;
+  padding-right: 32px;
+  overflow-y: hidden;
+  margin: 0 auto;
+}
+
+.mb_32px {
+  margin-bottom: 32px;
+}
+
+.main_p_style {
+  font-size: 13px;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+
+  line-height: 18px;
+  color: rgba(112, 113, 126, 1);
+}
