--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -20,7 +20,7 @@
   align-items: center;
 }
 .side_bar_link_item {
-  margin: 10px 0;
+  margin: 15px 0 !important;
 }
 .side_bar_link_item a {
   display: flex;
@@ -66,7 +66,7 @@
     height: 87vh;
   }
   .side_bar_link_item {
-    margin: 10px 0;
+    margin: 11px 0 !important;
   }
   .side_bar_link_item a p {
     font-family: HalvarBreitschrift;
