--- a/src/pages/earn/earn.css
+++ b/src/pages/earn/earn.css
@@ -5,11 +5,20 @@
   background: url(../../assets/images/earn-image.png);
   padding: 40px;
   width: 100%;
+  height: 180px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 19px;
   margin-top: 30px;
+  position: relative;
+  overflow: hidden;
+}
+.earn_header_bg svg {
+  position: absolute;
+  top: 0;
+
+  bottom: 0;
 }
 
 .earn_header_bg h2 {
@@ -31,15 +40,27 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
 }
+@media only screen and (max-width: 1710px) {
+  .earn_cards {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
 .earn_card_item {
   width: 226px;
   height: 150px;
-  border-radius: 19px;
+  border-radius: 22px;
   background: #212430;
   margin-bottom: 15px;
   position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 .bonus_block {
   position: absolute;
@@ -55,4 +76,17 @@
 .bonus_block p {
   margin-left: 5px;
   color: #000;
+}
+.back_ground_2 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/images/earn-card-images/earn-2.1.png);
+}
+
+.back_ground_3 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/images/earn-card-images/earn-8.1.png);
 }
