--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,6 @@
 }
 
 body {
-
-
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -14,13 +12,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #141622;
 }
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,
+.main_content_wrapper::-webkit-scrollbar {
   background: #141622;
 
   height: 4px;
   width: 3px;
 }
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+.main_content_wrapper::-webkit-scrollbar-thumb {
   background-color: hsla(0, 0%, 67%, 0.56);
 }
 
