--- a/src/components/deposit/deposit.css
+++ b/src/components/deposit/deposit.css
@@ -307,10 +307,12 @@
     padding-right: 12px;
     width: 100%;
     height: 100%;
+    padding-bottom: 10px;
   }
   .deposit_modal_block {
     grid-template-columns: repeat(2, 1fr);
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   .deposit_modal .page_title {
     margin-bottom: 20px;
@@ -358,9 +360,11 @@
   .modal_small_cards_template {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    width: 100%;
   }
   .modal_small_cards_template .modal_card_item {
-    width: 170px;
+    width: 165px;
+    margin-right: 10px;
   }
   .limited_value_block {
     flex-direction: column;
