--- a/src/components/sign-in/sign-in.css
+++ b/src/components/sign-in/sign-in.css
@@ -172,6 +172,7 @@ input[type="checkbox"]:before {
     padding-left: 12px;
     padding-right: 12px;
     z-index: 170;
+    height: 100vh;
   }
   .sign_in_modal {
     z-index: 1700;
